--- a/config/config.json
+++ b/config/config.json
@@ -5,10 +5,10 @@
     "selfListen": false,
     "forceLogin": true,
     "botName": "NexaSim V2",
-    "ownerName": "Hridoy",
-    "ownerUid": "61552837791926",
+    "ownerName": "Khan Rahul RK",
+    "ownerUid": "100017950245626",
     "adminUids": [
-      "61552837791926"
+      "100017950245626"
     ],
     "login": {
       "username": "your_username_here",
