--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,21 @@
 [
     {
+        "key": "dbln",
+        "value": "%7B%2261552814848384%22%3A%22h61I7qqb%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-19T17:04:59.521Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
+    },
+    {
         "key": "sb",
-        "value": "XBgcZ4fYdD7HXM9R-uSBTyFW",
+        "value": "krT6Zz63dX9cNO18MNP9ZBon",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.293Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "ps_l",
@@ -14,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "ps_n",
@@ -23,97 +32,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2799%3Btimestamp%3A1745672632",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749142585",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B668x360x2",
+        "value": "v1%3B620x360x2",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "datr",
-        "value": "3RsiaGWrN9ObOPRutB7dMCoP",
+        "value": "ynlQaLg5gKbyhL2aC9Fw0iw_",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
-    },
-    {
-        "key": "dpr",
-        "value": "2.1988937854766846",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "wd",
-        "value": "891x1654",
+        "value": "980x1688",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "c_user",
-        "value": "100088843296698",
+        "value": "61552814848384",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "xs",
-        "value": "13%3AWUmjNQofiiEM2A%3A2%3A1750184669%3A-1%3A-1",
+        "value": "41%3AJmNOwn1VtT6HZg%3A2%3A1750352690%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     },
     {
         "key": "fr",
-        "value": "1dyX6T1yzfGrBg33d.AWdPqNSE3bRtG7y6wFvx35IgPdBDRAwhcgV1U4IkklLSRFMjWXM.BoIiGV..AAA.0.0.BoUbLf.AWfRM-CLa0suu_84DA4glARG8Zw",
+        "value": "1P5xDBeyttltqv6I0.AWddTrzN40EFqBuDjdsJkv1pp8EJnjqGdDRPmdKB1QCa91MyBSU.BoUbJ5..AAA.0.0.BoVEMz.AWdXrwWbTtcPCrwsSDTqdJI5kUI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1750184681159%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-17T18:24:49.311Z",
-        "lastAccessed": "2025-06-17T18:24:49.311Z"
+        "creation": "2025-06-19T17:04:59.522Z",
+        "lastAccessed": "2025-06-19T17:04:59.522Z"
     }
 ]
